Replaced the Arrays.hashCode( byte[] ) by a call to a private method to compute the hashCode.
git-svn-id: https://svn.apache.org/repos/asf/directory/shared/branches/0.9.5@521995 13f79535-47bb-0310-9956-ffa450edef68